--- a/configuration.yaml
+++ b/configuration.yaml
@@ -922,6 +922,7 @@ switch:
     lights_ct:
       - light.michael_hue
       - light.ring_light
+      - light.headboard_light
 ### qBittorrent alternative speed custom compoent
   - platform: qbittorrent_alternative_speed
     host: 192.168.1.144
